Introduced nested component and implemented opt in for svelte components to be web components

--- a/profile/public/index.html
+++ b/profile/public/index.html
@@ -14,8 +14,9 @@
 </head>
 
 <body>
-	<profile-details name="Hans" id="profileDetails"></profile-details>
+	<sample-app name="Hans" id="profileDetails"></sample-app>
 
+	<profile-details></profile-details>
 
 	<script type="text/javascript">
 		let elementById = document.getElementById('profileDetails');
