Introduced real parameters for web components

--- a/profile/public/index.html
+++ b/profile/public/index.html
@@ -16,7 +16,7 @@
 <body>
 	<sample-app name="Hans" id="profileDetails"></sample-app>
 
-	<profile-details></profile-details>
+	<profile-details profile="1337"></profile-details>
 
 	<script type="text/javascript">
 		let elementById = document.getElementById('profileDetails');
