Added profile view based on web component

--- a/qa-locations-shell/index.html
+++ b/qa-locations-shell/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vuetify 3 Vite Preview</title>
+    <title>QA locations</title>
+    <script defer src='http://localhost:8080/build/bundle.js'></script>
 </head>
 
 <body>
