--- a/location/index.html
+++ b/location/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div id="app"></div>
+    <div id="location-app"></div>
     <script type="module" src="/src/main.ts"></script>
 </body>
 
