Reformated for eslint

--- a/qa-locations-shell/index.html
+++ b/qa-locations-shell/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>QA locations</title>
     <script defer src='http://localhost:8080/build/bundle.js'></script>
+    <script defer src="http://localhost:5050/assets/index.js"></script>
 </head>
 
 <body>
